# haskell_traits

./: .clang-format  CMakeLists.txt  README.md
include/haskell_traits/: applicative.hpp  functor.hpp  lazy.hpp  monad.hpp  rebindable.hpp
include/haskell_traits/detail/: func.hpp  meta.hpp
include/haskell_traits/instances/: optional.hpp  vector.hpp
test/: CMakeLists.txt  basic_tests.cpp  func.cpp  simple_test.hpp
